// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plots-BarChart 基础条形图 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": undefined,
  "barWidthRatio": 0.6,
  "colorField": "type",
  "data": Array [
    Object {
      "sales": 38,
      "type": "家具家电",
    },
    Object {
      "sales": 52,
      "type": "粮油副食",
    },
    Object {
      "sales": 61,
      "type": "生鲜水果",
    },
    Object {
      "sales": 145,
      "type": "美容洗护",
    },
    Object {
      "sales": 48,
      "type": "母婴用品",
    },
    Object {
      "sales": 38,
      "type": "进口食品",
    },
    Object {
      "sales": 38,
      "type": "食品饮料",
    },
    Object {
      "sales": 38,
      "type": "家庭清洁",
    },
  ],
  "height": NaN,
  "interactions": Array [
    Object {
      "type": "active-region",
    },
  ],
  "legend": Object {
    "position": "right-top",
    "reversed": true,
  },
  "marginRatio": 0.03125,
  "renderer": "canvas",
  "seriesField": "type",
  "tooltip": Object {
    "offset": 20,
    "reversed": true,
    "shared": true,
    "showMarkers": false,
  },
  "xAxis": Object {
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "nice": true,
  },
  "xField": "sales",
  "yAxis": Object {
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "type",
}
`;

exports[`Plots-HeatmapChart 兼容旧版热力图 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": undefined,
  "color": Array [
    "#dddddd",
    "#9ec8e0",
    "#5fa4cd",
    "#2e7ab6",
    "#114d90",
  ],
  "colorField": "value",
  "data": Array [
    Object {
      "country": "AD",
      "name": "hot dog",
      "value": 70,
    },
    Object {
      "country": "AD",
      "name": "burger",
      "value": 54,
    },
    Object {
      "country": "AD",
      "name": "sandwich",
      "value": 49,
    },
    Object {
      "country": "AD",
      "name": "kebab",
      "value": 4,
    },
    Object {
      "country": "AD",
      "name": "fries",
      "value": 11,
    },
    Object {
      "country": "AD",
      "name": "donut",
      "value": 68,
    },
    Object {
      "country": "AD",
      "name": "junk",
      "value": 49,
    },
    Object {
      "country": "AD",
      "name": "sushi",
      "value": 47,
    },
    Object {
      "country": "AD",
      "name": "ramen",
      "value": 64,
    },
    Object {
      "country": "AD",
      "name": "curry",
      "value": 51,
    },
    Object {
      "country": "AD",
      "name": "udon",
      "value": 6,
    },
    Object {
      "country": "AE",
      "name": "hot dog",
      "value": 45,
    },
    Object {
      "country": "AE",
      "name": "burger",
      "value": 97,
    },
    Object {
      "country": "AE",
      "name": "sandwich",
      "value": 69,
    },
    Object {
      "country": "AE",
      "name": "kebab",
      "value": 68,
    },
    Object {
      "country": "AE",
      "name": "fries",
      "value": 14,
    },
    Object {
      "country": "AE",
      "name": "donut",
      "value": 93,
    },
    Object {
      "country": "AE",
      "name": "junk",
      "value": 0,
    },
    Object {
      "country": "AE",
      "name": "sushi",
      "value": 84,
    },
    Object {
      "country": "AE",
      "name": "ramen",
      "value": 57,
    },
    Object {
      "country": "AE",
      "name": "curry",
      "value": 73,
    },
    Object {
      "country": "AE",
      "name": "udon",
      "value": 73,
    },
    Object {
      "country": "AF",
      "name": "hot dog",
      "value": 43,
    },
    Object {
      "country": "AF",
      "name": "burger",
      "value": 61,
    },
    Object {
      "country": "AF",
      "name": "sandwich",
      "value": 28,
    },
    Object {
      "country": "AF",
      "name": "kebab",
      "value": 12,
    },
    Object {
      "country": "AF",
      "name": "fries",
      "value": 22,
    },
    Object {
      "country": "AF",
      "name": "donut",
      "value": 54,
    },
    Object {
      "country": "AF",
      "name": "junk",
      "value": 90,
    },
    Object {
      "country": "AF",
      "name": "sushi",
      "value": 24,
    },
    Object {
      "country": "AF",
      "name": "ramen",
      "value": 72,
    },
    Object {
      "country": "AF",
      "name": "curry",
      "value": 40,
    },
    Object {
      "country": "AF",
      "name": "udon",
      "value": 78,
    },
    Object {
      "country": "AG",
      "name": "hot dog",
      "value": 35,
    },
    Object {
      "country": "AG",
      "name": "burger",
      "value": 6,
    },
    Object {
      "country": "AG",
      "name": "sandwich",
      "value": 64,
    },
    Object {
      "country": "AG",
      "name": "kebab",
      "value": 92,
    },
    Object {
      "country": "AG",
      "name": "fries",
      "value": 45,
    },
    Object {
      "country": "AG",
      "name": "donut",
      "value": 88,
    },
    Object {
      "country": "AG",
      "name": "junk",
      "value": 44,
    },
    Object {
      "country": "AG",
      "name": "sushi",
      "value": 16,
    },
    Object {
      "country": "AG",
      "name": "ramen",
      "value": 0,
    },
    Object {
      "country": "AG",
      "name": "curry",
      "value": 75,
    },
    Object {
      "country": "AG",
      "name": "udon",
      "value": 57,
    },
    Object {
      "country": "AI",
      "name": "hot dog",
      "value": 3,
    },
    Object {
      "country": "AI",
      "name": "burger",
      "value": 6,
    },
    Object {
      "country": "AI",
      "name": "sandwich",
      "value": 34,
    },
    Object {
      "country": "AI",
      "name": "kebab",
      "value": 72,
    },
    Object {
      "country": "AI",
      "name": "fries",
      "value": 21,
    },
    Object {
      "country": "AI",
      "name": "donut",
      "value": 30,
    },
    Object {
      "country": "AI",
      "name": "junk",
      "value": 99,
    },
    Object {
      "country": "AI",
      "name": "sushi",
      "value": 40,
    },
    Object {
      "country": "AI",
      "name": "ramen",
      "value": 1,
    },
    Object {
      "country": "AI",
      "name": "curry",
      "value": 70,
    },
    Object {
      "country": "AI",
      "name": "udon",
      "value": 58,
    },
    Object {
      "country": "AL",
      "name": "hot dog",
      "value": 40,
    },
    Object {
      "country": "AL",
      "name": "burger",
      "value": 90,
    },
    Object {
      "country": "AL",
      "name": "sandwich",
      "value": 24,
    },
    Object {
      "country": "AL",
      "name": "kebab",
      "value": 69,
    },
    Object {
      "country": "AL",
      "name": "fries",
      "value": 97,
    },
    Object {
      "country": "AL",
      "name": "donut",
      "value": 70,
    },
    Object {
      "country": "AL",
      "name": "junk",
      "value": 49,
    },
    Object {
      "country": "AL",
      "name": "sushi",
      "value": 90,
    },
    Object {
      "country": "AL",
      "name": "ramen",
      "value": 92,
    },
    Object {
      "country": "AL",
      "name": "curry",
      "value": 90,
    },
    Object {
      "country": "AL",
      "name": "udon",
      "value": 65,
    },
    Object {
      "country": "AM",
      "name": "hot dog",
      "value": 72,
    },
    Object {
      "country": "AM",
      "name": "burger",
      "value": 47,
    },
    Object {
      "country": "AM",
      "name": "sandwich",
      "value": 30,
    },
    Object {
      "country": "AM",
      "name": "kebab",
      "value": 51,
    },
    Object {
      "country": "AM",
      "name": "fries",
      "value": 23,
    },
    Object {
      "country": "AM",
      "name": "donut",
      "value": 63,
    },
    Object {
      "country": "AM",
      "name": "junk",
      "value": 30,
    },
    Object {
      "country": "AM",
      "name": "sushi",
      "value": 43,
    },
    Object {
      "country": "AM",
      "name": "ramen",
      "value": 8,
    },
    Object {
      "country": "AM",
      "name": "curry",
      "value": 49,
    },
    Object {
      "country": "AM",
      "name": "udon",
      "value": 61,
    },
    Object {
      "country": "AO",
      "name": "hot dog",
      "value": 83,
    },
    Object {
      "country": "AO",
      "name": "burger",
      "value": 6,
    },
    Object {
      "country": "AO",
      "name": "sandwich",
      "value": 17,
    },
    Object {
      "country": "AO",
      "name": "kebab",
      "value": 40,
    },
    Object {
      "country": "AO",
      "name": "fries",
      "value": 61,
    },
    Object {
      "country": "AO",
      "name": "donut",
      "value": 72,
    },
    Object {
      "country": "AO",
      "name": "junk",
      "value": 61,
    },
    Object {
      "country": "AO",
      "name": "sushi",
      "value": 50,
    },
    Object {
      "country": "AO",
      "name": "ramen",
      "value": 77,
    },
    Object {
      "country": "AO",
      "name": "curry",
      "value": 97,
    },
    Object {
      "country": "AO",
      "name": "udon",
      "value": 17,
    },
    Object {
      "country": "AQ",
      "name": "hot dog",
      "value": 15,
    },
    Object {
      "country": "AQ",
      "name": "burger",
      "value": 34,
    },
    Object {
      "country": "AQ",
      "name": "sandwich",
      "value": 26,
    },
    Object {
      "country": "AQ",
      "name": "kebab",
      "value": 80,
    },
    Object {
      "country": "AQ",
      "name": "fries",
      "value": 100,
    },
    Object {
      "country": "AQ",
      "name": "donut",
      "value": 97,
    },
    Object {
      "country": "AQ",
      "name": "junk",
      "value": 34,
    },
    Object {
      "country": "AQ",
      "name": "sushi",
      "value": 81,
    },
    Object {
      "country": "AQ",
      "name": "ramen",
      "value": 25,
    },
    Object {
      "country": "AQ",
      "name": "curry",
      "value": 100,
    },
    Object {
      "country": "AQ",
      "name": "udon",
      "value": 56,
    },
  ],
  "height": NaN,
  "label": Object {
    "style": Object {
      "fill": "#fff",
      "shadowBlur": 2,
      "shadowColor": "rgba(0, 0, 0, .45)",
    },
  },
  "legend": false,
  "renderer": "canvas",
  "shape": "square",
  "sizeField": "value",
  "type": "polygon",
  "xAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "line": null,
    "nice": true,
    "tickLine": null,
  },
  "xField": "name",
  "yAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "country",
}
`;

exports[`Plots-HeatmapChart 新版热力图基础用法 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": undefined,
  "color": Array [
    "#dddddd",
    "#9ec8e0",
    "#5fa4cd",
    "#2e7ab6",
    "#114d90",
  ],
  "colorField": "value",
  "data": Array [
    Object {
      "country": "AD",
      "name": "hot dog",
      "value": 70,
    },
    Object {
      "country": "AD",
      "name": "burger",
      "value": 54,
    },
    Object {
      "country": "AD",
      "name": "sandwich",
      "value": 49,
    },
    Object {
      "country": "AD",
      "name": "kebab",
      "value": 4,
    },
    Object {
      "country": "AD",
      "name": "fries",
      "value": 11,
    },
    Object {
      "country": "AD",
      "name": "donut",
      "value": 68,
    },
    Object {
      "country": "AD",
      "name": "junk",
      "value": 49,
    },
    Object {
      "country": "AD",
      "name": "sushi",
      "value": 47,
    },
    Object {
      "country": "AD",
      "name": "ramen",
      "value": 64,
    },
    Object {
      "country": "AD",
      "name": "curry",
      "value": 51,
    },
    Object {
      "country": "AD",
      "name": "udon",
      "value": 6,
    },
    Object {
      "country": "AE",
      "name": "hot dog",
      "value": 45,
    },
    Object {
      "country": "AE",
      "name": "burger",
      "value": 97,
    },
    Object {
      "country": "AE",
      "name": "sandwich",
      "value": 69,
    },
    Object {
      "country": "AE",
      "name": "kebab",
      "value": 68,
    },
    Object {
      "country": "AE",
      "name": "fries",
      "value": 14,
    },
    Object {
      "country": "AE",
      "name": "donut",
      "value": 93,
    },
    Object {
      "country": "AE",
      "name": "junk",
      "value": 0,
    },
    Object {
      "country": "AE",
      "name": "sushi",
      "value": 84,
    },
    Object {
      "country": "AE",
      "name": "ramen",
      "value": 57,
    },
    Object {
      "country": "AE",
      "name": "curry",
      "value": 73,
    },
    Object {
      "country": "AE",
      "name": "udon",
      "value": 73,
    },
    Object {
      "country": "AF",
      "name": "hot dog",
      "value": 43,
    },
    Object {
      "country": "AF",
      "name": "burger",
      "value": 61,
    },
    Object {
      "country": "AF",
      "name": "sandwich",
      "value": 28,
    },
    Object {
      "country": "AF",
      "name": "kebab",
      "value": 12,
    },
    Object {
      "country": "AF",
      "name": "fries",
      "value": 22,
    },
    Object {
      "country": "AF",
      "name": "donut",
      "value": 54,
    },
    Object {
      "country": "AF",
      "name": "junk",
      "value": 90,
    },
    Object {
      "country": "AF",
      "name": "sushi",
      "value": 24,
    },
    Object {
      "country": "AF",
      "name": "ramen",
      "value": 72,
    },
    Object {
      "country": "AF",
      "name": "curry",
      "value": 40,
    },
    Object {
      "country": "AF",
      "name": "udon",
      "value": 78,
    },
    Object {
      "country": "AG",
      "name": "hot dog",
      "value": 35,
    },
    Object {
      "country": "AG",
      "name": "burger",
      "value": 6,
    },
    Object {
      "country": "AG",
      "name": "sandwich",
      "value": 64,
    },
    Object {
      "country": "AG",
      "name": "kebab",
      "value": 92,
    },
    Object {
      "country": "AG",
      "name": "fries",
      "value": 45,
    },
    Object {
      "country": "AG",
      "name": "donut",
      "value": 88,
    },
    Object {
      "country": "AG",
      "name": "junk",
      "value": 44,
    },
    Object {
      "country": "AG",
      "name": "sushi",
      "value": 16,
    },
    Object {
      "country": "AG",
      "name": "ramen",
      "value": 0,
    },
    Object {
      "country": "AG",
      "name": "curry",
      "value": 75,
    },
    Object {
      "country": "AG",
      "name": "udon",
      "value": 57,
    },
    Object {
      "country": "AI",
      "name": "hot dog",
      "value": 3,
    },
    Object {
      "country": "AI",
      "name": "burger",
      "value": 6,
    },
    Object {
      "country": "AI",
      "name": "sandwich",
      "value": 34,
    },
    Object {
      "country": "AI",
      "name": "kebab",
      "value": 72,
    },
    Object {
      "country": "AI",
      "name": "fries",
      "value": 21,
    },
    Object {
      "country": "AI",
      "name": "donut",
      "value": 30,
    },
    Object {
      "country": "AI",
      "name": "junk",
      "value": 99,
    },
    Object {
      "country": "AI",
      "name": "sushi",
      "value": 40,
    },
    Object {
      "country": "AI",
      "name": "ramen",
      "value": 1,
    },
    Object {
      "country": "AI",
      "name": "curry",
      "value": 70,
    },
    Object {
      "country": "AI",
      "name": "udon",
      "value": 58,
    },
    Object {
      "country": "AL",
      "name": "hot dog",
      "value": 40,
    },
    Object {
      "country": "AL",
      "name": "burger",
      "value": 90,
    },
    Object {
      "country": "AL",
      "name": "sandwich",
      "value": 24,
    },
    Object {
      "country": "AL",
      "name": "kebab",
      "value": 69,
    },
    Object {
      "country": "AL",
      "name": "fries",
      "value": 97,
    },
    Object {
      "country": "AL",
      "name": "donut",
      "value": 70,
    },
    Object {
      "country": "AL",
      "name": "junk",
      "value": 49,
    },
    Object {
      "country": "AL",
      "name": "sushi",
      "value": 90,
    },
    Object {
      "country": "AL",
      "name": "ramen",
      "value": 92,
    },
    Object {
      "country": "AL",
      "name": "curry",
      "value": 90,
    },
    Object {
      "country": "AL",
      "name": "udon",
      "value": 65,
    },
    Object {
      "country": "AM",
      "name": "hot dog",
      "value": 72,
    },
    Object {
      "country": "AM",
      "name": "burger",
      "value": 47,
    },
    Object {
      "country": "AM",
      "name": "sandwich",
      "value": 30,
    },
    Object {
      "country": "AM",
      "name": "kebab",
      "value": 51,
    },
    Object {
      "country": "AM",
      "name": "fries",
      "value": 23,
    },
    Object {
      "country": "AM",
      "name": "donut",
      "value": 63,
    },
    Object {
      "country": "AM",
      "name": "junk",
      "value": 30,
    },
    Object {
      "country": "AM",
      "name": "sushi",
      "value": 43,
    },
    Object {
      "country": "AM",
      "name": "ramen",
      "value": 8,
    },
    Object {
      "country": "AM",
      "name": "curry",
      "value": 49,
    },
    Object {
      "country": "AM",
      "name": "udon",
      "value": 61,
    },
    Object {
      "country": "AO",
      "name": "hot dog",
      "value": 83,
    },
    Object {
      "country": "AO",
      "name": "burger",
      "value": 6,
    },
    Object {
      "country": "AO",
      "name": "sandwich",
      "value": 17,
    },
    Object {
      "country": "AO",
      "name": "kebab",
      "value": 40,
    },
    Object {
      "country": "AO",
      "name": "fries",
      "value": 61,
    },
    Object {
      "country": "AO",
      "name": "donut",
      "value": 72,
    },
    Object {
      "country": "AO",
      "name": "junk",
      "value": 61,
    },
    Object {
      "country": "AO",
      "name": "sushi",
      "value": 50,
    },
    Object {
      "country": "AO",
      "name": "ramen",
      "value": 77,
    },
    Object {
      "country": "AO",
      "name": "curry",
      "value": 97,
    },
    Object {
      "country": "AO",
      "name": "udon",
      "value": 17,
    },
    Object {
      "country": "AQ",
      "name": "hot dog",
      "value": 15,
    },
    Object {
      "country": "AQ",
      "name": "burger",
      "value": 34,
    },
    Object {
      "country": "AQ",
      "name": "sandwich",
      "value": 26,
    },
    Object {
      "country": "AQ",
      "name": "kebab",
      "value": 80,
    },
    Object {
      "country": "AQ",
      "name": "fries",
      "value": 100,
    },
    Object {
      "country": "AQ",
      "name": "donut",
      "value": 97,
    },
    Object {
      "country": "AQ",
      "name": "junk",
      "value": 34,
    },
    Object {
      "country": "AQ",
      "name": "sushi",
      "value": 81,
    },
    Object {
      "country": "AQ",
      "name": "ramen",
      "value": 25,
    },
    Object {
      "country": "AQ",
      "name": "curry",
      "value": 100,
    },
    Object {
      "country": "AQ",
      "name": "udon",
      "value": 56,
    },
  ],
  "height": NaN,
  "label": Object {
    "style": Object {
      "fill": "#fff",
      "shadowBlur": 2,
      "shadowColor": "rgba(0, 0, 0, .45)",
    },
  },
  "legend": false,
  "renderer": "canvas",
  "type": "polygon",
  "xAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "line": null,
    "nice": true,
    "tickLine": null,
  },
  "xField": "name",
  "yAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "country",
}
`;
